@startuml
package [..] as C_0016431317663134048372 {
package [src] as C_0010634688166860467214 {
package [models] as C_0001626712604113445200 {
abstract "::Item" as C_0005967165952864249862
abstract C_0005967165952864249862 {
+Item() : void
+Item(std::string_view name, std::string_view desc, int default_price, int add_price = 0) : void
+~Item() = default : void
..
+addToPrice(int add) : void
+getDesc() const : const std::string &
{abstract} +getItemType() const = 0 : ItemType
+getName() const : const std::string &
+getPrice() const : int
+getPriceModified() const : int
+getQualityPrice() const : int
+setDefaultDesc() : void
+setDefaultPrice() : void
+setDesc(std::string_view d) : void
+setName(std::string_view n) : void
+setQualityPrice(int q_price) : void
+toJson() const : QJsonObject
__
#_default_price : const int
#_desc : std::string
#_name : std::string
#_price : int
#_quality_price : int
}
class "::Player" as C_0003692324345213718176
class C_0003692324345213718176 {
+Player() : void
+Player(std::string_view character_name, std::string_view author_name, int level, Attribute p_die1, Attribute p_die2, WeaponType pref_weapon, bool canMartialWeapon, bool canMartialArmor, bool canRange, bool canShield) : void
..
+getAuthorName() const : const std::string &
+getCanMartialArmor() const : bool
+getCanMartialWeapon() const : bool
+getCanRange() const : bool
+getCanShield() const : bool
+getCharacterName() const : const std::string &
+getLevel() const : int
+getPreferredWeaponType() const : WeaponType
+getPrimaryDie1() const : Attribute
+getPrimaryDie2() const : Attribute
+setAuthorName(std::string_view author_name) : void
+setCanMartialArmor(bool canMartialArmor) : void
+setCanMartialWeapon(bool canMartialWeapon) : void
+setCanRange(bool canRange) : void
+setCanShield(bool canShield) : void
+setCharacterName(std::string_view ch_name) : void
+setLevel(int level) : void
+setPreferredWeaponType(WeaponType pref_weapon) : void
+setPrimaryDie1(Attribute p_die1) : void
+setPrimaryDie2(Attribute p_die2) : void
+toJson() const : QJsonObject
__
-_author_name : std::string
-_canMartialArmor : bool
-_canMartialWeapon : bool
-_canRange : bool
-_canShield : bool
-_character_name : std::string
-_level : int
-_preferred_weapon_type : WeaponType
-_primary_die1 : Attribute
-_primary_die2 : Attribute
}
}
}
package [gui] as C_0004695295680056233043 {
package [models] as C_0006018854047243949875 {
class "::MyPlayerTableModel" as C_0011863623600894958275
class C_0011863623600894958275 {
+MyPlayerTableModel(const std::vector<std::unique_ptr<Player>> * _container, QObject * parent = nullptr) : void
..
+columnCount(const QModelIndex & parent = QModelIndex()) const : int
+data(const QModelIndex & index, int role = Qt::DisplayRole) const : QVariant
+headerData(int section, Qt::Orientation orientation, int role = Qt::DisplayRole) const : QVariant
+refresh() : void
+rowCount(const QModelIndex & parent = QModelIndex()) const : int
__
-container : const std::vector<std::unique_ptr<Player>> *
}
class "::MyItemTableModel" as C_0014262518239461510613
class C_0014262518239461510613 {
+MyItemTableModel(const std::vector<std::unique_ptr<Item>> * _container, QObject * parent = nullptr) : void
..
+columnCount(const QModelIndex & parent = QModelIndex()) const : int
+data(const QModelIndex & index, int role = Qt::DisplayRole) const : QVariant
+headerData(int section, Qt::Orientation orientation, int role = Qt::DisplayRole) const : QVariant
+refresh() : void
+rowCount(const QModelIndex & parent = QModelIndex()) const : int
__
-container : const std::vector<std::unique_ptr<Item>> *
}
}
class "::MainWindow" as C_0002900986228388971956
class C_0002900986228388971956 {
+MainWindow(QWidget * parent = nullptr) : void
+~MainWindow() : void
..
+metaObject() const : const QMetaObject *
-on_BttnAddPlayers_clicked() : void
-on_BttnEditPlayers_clicked() : void
-on_BttnLoadCampain_clicked() : void
-on_BttnNewCampain_clicked() : void
-on_BttnNormalGenerate_clicked() : void
-on_BttnQuickGenerate_clicked() : void
-on_BttnSaveCampain_clicked() : void
-on_TableGeneratedItems_doubleClicked(const QModelIndex & index) : void
-on_removePlayer(int index) : void
+qt_metacall(QMetaObject::Call, int, void **) : int
+qt_metacast(const char *) : void *
{static} -qt_static_metacall(QObject *, QMetaObject::Call, int, void **) : void
{static} +tr(const char * s, const char * c = nullptr, int n = -1) : QString
-updateUIState() const : void
__
-_appcontrol : AppController
-_item_model : MyItemTableModel *
-_loadedFile : QString
-_player_model : MyPlayerTableModel *
{static} +staticMetaObject : const QMetaObject
-ui : Ui::MainWindow *
}
}
}
C_0011863623600894958275 --> C_0003692324345213718176 : -container
C_0014262518239461510613 --> C_0005967165952864249862 : -container
C_0002900986228388971956 --> C_0014262518239461510613 : -_item_model
C_0002900986228388971956 --> C_0011863623600894958275 : -_player_model

'Generated with clang-uml, version 0.6.2
'LLVM version clang version 20.1.7 (https://github.com/llvm/llvm-project.git 6146a88f60492b520a36f8f8f3231e15f3cc6082)
@enduml
